--- a/9-DivaGeneral.tex
+++ b/9-DivaGeneral.tex
@@ -42,6 +42,17 @@ Simply type:
 \etips
 
 
+
+\section{List of 2D tools}
+
+List of all diva* with small description of action associated and classification (prepropessing, paramter optimisation,   etc)
+
+Note that \commands{dv*} are normally not to be used directly by users but are exploited by the main \diva scripts \command{diva*}.
+
+
+
+
+
 \section{Contour\label{contourdiva}}
 %--------------------------------------
 
