resolved conflicts and modified diva-on-web

--- a/0-DivaHeader2012.tex
+++ b/0-DivaHeader2012.tex
@@ -70,7 +70,7 @@ literate={\$}{{\textcolor{red}{\$}}}1
 \graphicspath{
 {./figures/preprocessing/},{./figures/postprocessing/},{./figures/icones/},{./figures/test_cases/},
 {./figures/examples/},{./figures/gallery/},{./figures/images/},{./figures/GUI/},{./figures/analysis/},
-{./figures/errors/},{./figures/advection/},{./figures/papers/}
+{./figures/errors/},{./figures/advection/},{./figures/papers/},{./figures/divaonweb/}
 } 
  
 %------------------------
