--- a/20-DivaPublications.bib
+++ b/20-DivaPublications.bib
@@ -613,6 +613,23 @@
   timestamp = {2009.06.23}
 }
 
+@ARTICLE{SCHLITZER02,
+  author = {R. Schlitzer},
+  title = {{Interactive analysis and visualization of geoscience data with Ocean
+	Data View}},
+  journal = {Computers \& Geosciences},
+  year = {2002},
+  volume = {28},
+  pages = {1211-1218},
+  number = {10},
+  doi = {10.1016/S0098-3004(02)00040-7},
+  issn = {0098-3004},
+  keywords = {Geoscience},
+  owner = {charles},
+  timestamp = {2011.04.30},
+  url = {http://www.sciencedirect.com/science/article/B6V7D-46TB0P2-C/2/49937e4939d29fab010dc7f0af310bc8}
+}
+
 @ARTICLE{SHEN98b,
   author = {Shen, S. and Smith, T. and Ropelewski, C. and Livezey, R.},
   title = {An optimal regional averaging method with error estimates and a test
