chapter divaonweb and odv

--- a/14-DivaOnWeb.tex
+++ b/14-DivaOnWeb.tex
@@ -91,17 +91,23 @@ The outputs are available in various formats (Fig.~\ref{fig:divaonweb6}): NetCDF
 \section{Ocean Data View}
 %------------------------
 
-reference to ODV user guide and Reiner
-
+\index{Ocean Data View}
+Ocean Data View \citep[ODV,][]{SCHLITZER02} is a software for the analysis and visualization of oceanographic data. Among the numerous possibilities ODV, we find the production of gridded fields based on the original data. Three methods are offered \citep{SCHLITZER12}: 
+\begin{enumerate}
+\item Quick gridding, a weighted averaging algorithm optimized for speed, adapted for situations with millions data points.
+\item VG gridding, a more sophisticated weighted averaging algorithm.
+\item \diva gridding.
+\end{enumerate}
 
 \begin{figure}[H]
 \centering 
-\includegraphics[width=.75\textwidth]{odvdiva1}
-\caption{\label{fig:divaonweb6}}
+\includegraphics[width=.95\textwidth]{odvdiva1}
+\caption{Example of VG gridding and \diva gridding with ODV (from \citet{SCHLITZER12}).\label{fig:divaonweb6}}
 \end{figure}
 
 \section{Matlab toolbox}
 %------------------------
 
+\index{Matlab}
 Link to the package +
 figures (presented in diva workshop and SDN annual meeting
