--- a/20-DivaPublications.bib
+++ b/20-DivaPublications.bib
@@ -613,6 +613,16 @@
   timestamp = {2009.06.23}
 }
 
+@TECHREPORT{Schlitzer,
+  author = {R. Schlitzer},
+  title = {Ocean Data View User's Guide (Version 4.5.0)},
+  institution = {Alfred Wegener Institute},
+  year = {2012},
+  owner = {charles},
+  timestamp = {2012.11.01},
+  url = {http://odv.awi.de/fileadmin/user_upload/odv/misc/odv4Guide.pdf}
+}
+
 @ARTICLE{SCHLITZER02,
   author = {R. Schlitzer},
   title = {{Interactive analysis and visualization of geoscience data with Ocean
