--- a/9-DivaGeneral.tex
+++ b/9-DivaGeneral.tex
@@ -43,10 +43,11 @@ Simply type:
 
 
 
-\section{List of 2D tools}
+\section{List of 2-D tools}
+%-------------------------
 
-List of all \command{diva*} with small description of action associated and classification (pre-propessing, parameter optimisation, etc)
-Note that \commands{dv*} are normally not to be used directly by users but are exploited by the main \diva scripts \command{diva*}.
+List of all \command{diva*} with small description of action associated and classification (pre-processing, parameter optimisation, etc)
+Note that \command{dv*} are normally not to be used directly by users but are exploited by the main \diva scripts \command{diva*}.
 
 
 
