--- a/20-DivaPublications.bib
+++ b/20-DivaPublications.bib
@@ -613,7 +613,7 @@
   timestamp = {2009.06.23}
 }
 
-@TECHREPORT{Schlitzer,
+@TECHREPORT{SCHLITZER12,
   author = {R. Schlitzer},
   title = {Ocean Data View User's Guide (Version 4.5.0)},
   institution = {Alfred Wegener Institute},
