--- a/9-DivaGeneral.tex
+++ b/9-DivaGeneral.tex
@@ -97,7 +97,7 @@ In realistic application, the contours are more complex: they have more sub-cont
 \end{figure}
 
 %---------------
-\section{Data}
+\section{Data\label{sec:dataformat}}
 %----------------
 
 The data file (\file{data.dat}) contains three (or four) columns: 
