--- a/10-DivaPreprocessing.tex
+++ b/10-DivaPreprocessing.tex
@@ -8,6 +8,7 @@ We describe in this chapter the tools to prepare the various input files present
 \section{Creation of topography\label{sec:howtotopo}}
 %---------------------------------------------------------
 
+\index{Topography}
 Topographies are necessary in two cases: first when you work in a vertical plane and want to interpolate several profiles from a cruise; second is when you need contour files at different depths to perform analysis. We describe here two techniques to get a topography file compatible with \diva.
 
 
@@ -81,15 +82,21 @@ you have your main climatological working place. Push {\tt OK} and be patient. (
 %
 %\end{enumerate}
 
-Go into Cygwin (or into Linux mode) and place yourself in the main directory of your climatology production. You should have a big {\tt topogebco.asc} file on which you can apply a {\tt head -20 topogebco.asc} to see if the file was created correctly. You also should have a {\tt gebcoprep} file. If not, copy the {\tt gebcoprep.example} file as {\tt gebcoprep}.
+Go into Cygwin (or into Linux mode) and place yourself in the main directory of your climatology production. You should have a big {\tt topogebco.asc} file on which you can apply
 
-If you need to mask regions, edit {\tt gebcoprep} and add lines as those put with {\tt \#awk} followed by {\tt \#mv bidon}. They should be self explaining and allow excluding regions that are defined by relationships between longitude and latitude. (Example: {\tt ($2 > 57.0+0.6*$1) {x=-10.} } means that regions where latitude is larger than \texttt{57+0.6*longitude} will be masked). Then execute {\tt gepcoprep} and be {\bf very} patient when working on large domains. Normally you do not to repeat this step a lot of times.
+\begin{lstlisting}[style=Bash]
+[charles@gher13 input] head -20 topogebco.asc
+\end{lstlisting}
 
-Once you defined the regions to be masked in this way, execute {\tt gebcoprep}. This will create a file
-{\tt ./input/topo.gebco}, which you can have a look at with the {\tt head} command.
+to see if the file was created correctly. You also should have a \command{gebcoprep} file. If not, copy the \file{gebcoprep.example} file as \command{gebcoprep}.
 
-Now you are ready to prepare the gridded topography {\tt topo.grd} from which \diva will extract contours. To prepare it,
-copy or move {\tt ./input/topo.gebco} into the diva working directory to have {\tt divastripped/input/topo.gebco}.
+If you need to mask regions, edit \command{gebcoprep} and add lines as those put with {\tt \#awk} followed by {\tt \#mv bidon}. They should be self explaining and allow excluding regions that are defined by relationships between longitude and latitude. (Example: {\tt ($2 > 57.0+0.6*$1) {x=-10.} } means that regions where latitude is larger than \texttt{57+0.6*longitude} will be masked). Then execute \command{gepcoprep} and be {\bf very} patient when working on large domains. Normally you do not to repeat this step a lot of times.
+
+Once you defined the regions to be masked in this way, execute \command{gebcoprep}. This will create a file
+\file{./input/topo.gebco}, which you can have a look at with the \command{head} command.
+
+Now you are ready to prepare the gridded topography \file{topo.grd} from which \diva will extract contours. To prepare it,
+copy or move \file{./input/topo.gebco} into the diva working directory to have \file{divastripped/input/topo.gebco}.
 
 The resolution of GEBCO is 1 minute. This might be much too fine for large scale analysis and you can run
 {\tt gebco2diva} with optional arguments {\tt nx ny} to make a grid using only every {\tt nx} point in $x$ direction and {\tt ny} in $y$ direction. If for example you are interested in a \diva output resolution that is working at a 100 km scale, {\tt gebco2diva 15 15} would still provide a very fine topography with respect to the scales of interest.
@@ -317,7 +324,7 @@ The script \command{divafit}: uses the data (\file{./input/data.dat}) for a dire
 \command{divafit -r} \qquad: puts the new value of $L$ in \file{param.par} in function of the fit.\\
 \command{divafit n} \qquad: performs the fit on a sample of \texttt{n*(n-1)/2} couples of data (sub-sampling). 
 
-\examples:\\
+\example\\
 \command{divafit -r 100}: performs a fit on $4950$ couples of data and update the file \file{param.par}.
 
 \btips
@@ -344,7 +351,7 @@ Finally, file \file{param.par.fit} is the original \file{param.par} file except 
 \subsection{\command{divagcv}}
 %-------------------------------
 
-The script \command{divagcv} exploits \diva module (\texttt{gcvfac}), analysing random fields to assess the generalized cross validator (GCV, see Chap. \ref{gcv} for theoretical developments). The script \command{divagcv} is an example of how to minimize the estimator by changing the signal-to-noise ratio ($\snr$) value, but could be adapted to optimize other parameters as well, such as correlation length.
+The script \command{divagcv} exploits \diva module (\texttt{gcvfac}), analysing random fields to assess the generalized cross validator (GCV, see Chapter~\ref{chap:analysisparameters} for theoretical developments). The script \command{divagcv} is an example of how to minimize the estimator by changing the signal-to-noise ratio ($\snr$) value, but could be adapted to optimize other parameters as well, such as correlation length.
 
 Input to the module is the number of random estimates required (the larger the value, the more robust the estimator). Default value is 5, unless you change in \command{divacalc}. The user has to provide an input file \file{./input/gvcsampling.dat} containing the list of values for $\snr$ on which to try the estimator (typically around the values provided by \command{divafit}).
 
@@ -376,169 +383,6 @@ In \file{param.par.gcv}, you find an adapted version of the original \file{param
 
 Note that in the present version (\diva-\divaversion), tools  \command{divacv} and \command{divacvrand}  
 do not adapt the error norm to include the relative weights on data. This will be introduced in the next versions.
-
-
-
-\section{Data selection tools (Version 1.0)}
-%--------------------------------------------
-
-
-This is a quick guide to use scripting tools to extract data from an ascii spreadsheet file compliant with the ODV-spreadsheet format (both full and compact version). The extracted data file can then directly be used as the input file ({\tt data.dat}) for \diva.
-
-\subsection{Installation} 
-%------------------------
-
-
-Place yourself in a directory of you choice, typically {\tt diva-x.y.z}
-\begin{itemize}
-\item
- {\tt gunzip diva-selector.tar.gz}
- \item 
- {\tt tar -xvf diva-selector.tar} 
- \end{itemize}
-This creates a directory {\tt ./selector} where you should perform the data extraction, so place yourself there ({\tt cd selector}). In this directory you find scripts {\tt divaselector} and {\tt divaguessforms}.
-
-Use {\tt divaguessforms} on one of your ODV-spreadsheet files 
-({\tt divaguess\-forms myODV\-spread\-sheet\-.txt})
-to create a template {\tt select.form.guess} including
-guesses on delimiters ({\tt ;} or {\tt TAB}), coordinates columns, depth columns, and date columns. Use this template to create your own forms {\tt select.form} by copying the template ({\tt cp select.form.guess select.form}).
-Should you not use the ISO Date format, it can be adapted in {\tt diva\-selector} (head of the file) and {\tt diva\-guessforms} (tail of the file, look for {\tt yyyy}). To help you selection the columns, {\tt diva\-guessforms} creates a file {\tt ODVcolumns} with the title and number of each column interpreted from the input file.
- 
-\subsection{Batch use}
-%---------------------
-
-\begin{itemize}
-\item Edit {\tt select.form} and {\tt timeselect.form} to adapt to your selection criteria.
-\item Execute {\tt divaselector myODVspreadsheet.txt data.dat} to extract data based on the criteria and create a {\tt data.dat} suitable for input into \diva.
-\end{itemize}
-
-You can wrap these two steps into loops by dynamically creating {\tt select.form} (\textit{e.g.} for different depth values).
-
-Note that {\tt divaselector} creates an {\tt awk} extraction program {\tt makeselection} that you can save under another name if you want to adapt it for further use (calculating data weights depending on depth for example).
-
-
-
-
-\subsection{Form definition}
-%---------------------------
-
-The selection of fields is based in ascii file {\tt select.form}. 
-
-In this example, longitude data are found in column 4 of the spreadsheet, latitude in column 5.
-Weights and Date allow the column parameter to be zero (weights are then 1 and no date test will be performed respectively).
-
-In detail, the file defines the structure of the input file and selection criteria
-\begin{itemize}
-\item
-The first line contains the delimiter used in the file ($\backslash${\tt t} or {\tt ;})
-\item 
-The second line {\bf must} contain x coordinates information
-
-{\tt free-name  column-in-data-file  xmin xmax}. 
-
-Data will be taken if \texttt{x} values are in the range \texttt{xmin-xmax}. If \texttt{xmin=*}, no test on \texttt{xmin} will be performed (i.e., all values lower than \texttt{xmax} are taken). Similarly, if \texttt{xmax=*}, no test on \texttt{xmax} is performed.
-
-\item On the obligatory third line, we have a similar structure for the y coordinate
- 
-{\tt free-name  column-in-data-file  ymin ymax}
-
-\item In the fourth line the variable to be analysed, is specified, with the same structure .
-
-\end{itemize}
-
-
-These four lines are mandatory.
-
-
-\begin{itemize}
-\item
-
-A fifth line can contain the relative data weights
-
-{\tt free-name  column-in-data-file  wmin wmax}
-
-In addition, if {\tt column-in-data-file} is zero, then relative data weight are taken 1 (and the two last parameters are without effect)
-
-\item The sixth line is related to time-selection and only two parameters are actually used
-{\tt free-name column-in-data-file}
-
-Because of the special pattern of time, range in time is not specified by min-max values
-but in a separate file \file{timeselect.form}. 
-If {\tt column-in-data-file} for the time-selection is zero, no selection on dates is performed and all data satisfying the other criteria will be taken. 
-
-\item 
-Any additional line of \file{select.form} after the sixth will add selection criteria with the same structure
-
-{\tt free-name column-in-data-file minval maxval}
-
-\end{itemize}
-
-
-The addition criteria can be used to select depth ranges for example or water masses (salinity and temperature in given ranges). They can also be used to select data corresponding to quality flag values.
-
-In the example {\tt select.form}, temperature data will be extracted west of $-10.4$ degrees longitude, with depth
-of data between 20 and 30.5 meters and salinity values below 39.
-
-The file \file{timeselect.form} has a similar form than the {\tt select.form} but is only dealing with the allowed
-ranges for years, month, days, hours and minutes (the columns position is defined in \file{select.form}).
-The selection is done as for \file{select.form} with {\tt *} standing for no test. 
-In the example, all data from year 1960 on are taken whenever they correspond to October, November or December.
-
-\subsection{Tricks}
-%------------------
-
-\begin{itemize}
-\item If you have several ascii input files with different structures, you can create a selection (with wild cards) for each of them that leads to an identical output structure. Then you can concatenate ({\tt cat}) these output files into a singly coherent
-file.
-
-\item If you have a very large data file, instead of running \command{divaguessforms} on this file, first create a smaller one {\tt head -1000 myfile > testfile} and apply \command{divaguessforms testfile}.
-
-\item If the spreadheet file is created by an export from ODV, quality flags generally follow the variable to which they correspond. Hence if on the fourth line (variable to analyse) of {\tt select.form} you specify column 12 for example, on line seven of {\tt select.form} you can include 
-
-{\tt qualityflag  13   3 3}
-
-to select all data with quality flag value 3.
-
-\item If you just need a few data extractions and prefer a graphical interface, import the data into ODV. Then use the
-{\tt Configuration -> Selection criteria}, make your selection, go into {\tt SURFACE} (or {\tt SECTION}) mode and use the {\tt Export X/Y/Z} tool that produces a \file{win1.oai} file almost ready for \diva input as \file{data.dat}. You only need to adapt the fourth column so that it includes ones, nothing or relative weights. You can achieve this for example on a command line with:
-\begin{lstlisting}[style=Bash]
-[charles@gher13 divastripped]$ awk '\{print \$1,\$2,\$3,1\}' ./input/win1.oai > ./input.data.dat
-\end{lstlisting}
-\end{itemize}
-
-{\bf Note:} The extraction for large data sets with {\tt divaselector} can be time consuming since it is based on non-optimized {\tt awk} coding.
- 
-\begin{exfile}[H]
-\begin{footnotesize}
-\texttt{
-$\backslash$ t\\
-Longitude  4  -10.4  *\\
-Latitude  5  *  *\\
-Temperature  10  *  *\\
-Weights   0   1    1\\
-Date  6  \\
-Depth  8  20  30.5\\
-Salinity  12  *  39\\
-}
-\end{footnotesize}
-\caption{{\tt select.form} file content.} 
-\end{exfile}
-
-
-\begin{exfile}[H]
-\begin{footnotesize}
-\texttt{
-year 1960 *\\
-month 10 12\\
-day * *\\
-hour 0 24\\
-min 0 60
-}
-\end{footnotesize}
-\caption{{\tt timeselect.form} file content.} 
-\end{exfile}
-
-
 
 
 
