--- a/14-DivaOnWeb.tex
+++ b/14-DivaOnWeb.tex
@@ -22,9 +22,9 @@ The web interface of \diva is based on OpenLayer (\url{http://openlayers.org/}) 
 \begin{figure}[htpb]
 	\centering
 	\parbox{.5\textwidth}{
-		\includegraphics[width=.45\textwidth,bb=166  289 440 564]{gridding}
+		\includegraphics[width=.475\textwidth]{diva_on_web_paper1}
 		}\parbox{.5\textwidth}{
-		\caption{Gridding problem: the blue dots indicate data positions, while the nodes of the grid  are the points where the field has to be determined.\label{gridproblem}}
+		\caption{.\label{fig:diva_on_web_paper1}}
 		}
 \end{figure}
 
@@ -74,7 +74,7 @@ The outputs are available in various formats (Fig.~\ref{fig:divaonweb6}): NetCDF
 
 \begin{figure}[H]
 \centering 
-\includegraphics[width=.75\textwidth]{divaonweb6}
+\includegraphics[width=.5\textwidth]{divaonweb6}
 \caption{\label{fig:divaonweb6}}
 \end{figure}
 
