added index entries and references bib

--- a/20-DivaPublications.bib
+++ b/20-DivaPublications.bib
@@ -382,6 +382,19 @@
   timestamp = {2010.11.11}
 }
 
+@ARTICLE{CRESSMAN59,
+  author = {G. P. Cressman},
+  title = {An operational objective analysis system},
+  journal = mwr,
+  year = {1959},
+  volume = {87},
+  pages = {367-374},
+  number = {10},
+  doi = {10.1175/1520-0493(1959)087<0367:AOOAS>2.0.CO;2},
+  owner = {charles},
+  timestamp = {2011.11.29}
+}
+
 @ARTICLE{DELHOMME78,
   author = {J.P. Delhomme},
   title = {Kriging in the hydrosciences},
