--- a/6-DivaParameters.tex
+++ b/6-DivaParameters.tex
@@ -9,7 +9,7 @@
 %------------------------------------------------
 \section{Determination of the correlation length}
 %------------------------------------------------
-
+\index{Correlation length}
 The correlation length $L$ translates the distance over which a given data point influences its neighbourhood (Section~\ref{sec:parammeaning}). The method to evaluate $L$ is to fit the theoretical kernel of \eqref{divaformula2} (see Fig.~\ref{kernel1}) to the correlation between data assuming spatial isotropy and homogeneity in correlations.
 
 \subsection{Illustration\label{sec:medseaex}}
